fix alignment

--- a/style/_audit-results.scss
+++ b/style/_audit-results.scss
@@ -126,7 +126,7 @@
                     }
                 }
 
-                div:last-child {
+                div:last-child:has(button) {
                     margin-top: .75rem;
                     display: flex;
                     justify-content: flex-end;
